# payroll

./: .gitignore  AI_ENGINEERING_ROADMAP.md  DEPLOYMENT_GUIDE.md  FINAL_COMPLETION_REPORT.md  PHASE_1_COMPLETION_SUMMARY.md  PROJECT_AUDIT.md  README.md
docs/: COMPLETE_DIRECTORY_TREE.md  DIRECTORY_STRUCTURE.md  EXECUTION_ROADMAP.md  GETTING_STARTED.md
modules/bq-finops-cli/: MODULE_D_COMPLETION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
modules/bq-finops-cli/src/bq_finops/: __init__.py  analyzer.py  cli.py  config.py  optimizer.py
modules/bq-finops-cli/tests/: test_analyzer.py  test_config.py  test_optimizer.py
modules/dataform-warehouse-blueprints/: MODULE_C_PUBLICATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
modules/dataform-warehouse-blueprints/examples/: dim_employee_config.yaml  fact_payroll_config.yaml  mart_payroll_summary_config.yaml
modules/dataform-warehouse-blueprints/src/dataform_blueprints/: __init__.py  cli.py  config.py  generator.py
modules/dataform-warehouse-blueprints/src/dataform_blueprints/templates/: aggregate_table.sqlx.j2  dimension_table.sqlx.j2  fact_table.sqlx.j2  staging_table.sqlx.j2
modules/dataform-warehouse-blueprints/tests/: test_config.py  test_generator.py
modules/scd2-bq-engine/: .gitignore  MODULE_B_PUBLICATION.md  README.md  pyproject.toml  setup.py
modules/scd2-bq-engine/examples/: dim_employee_config.yaml
modules/scd2-bq-engine/src/scd2_bq_engine/: __init__.py  cli.py  config.py  generator.py
modules/scd2-bq-engine/src/scd2_bq_engine/templates/: scd2_dimension.sqlx.j2
modules/scd2-bq-engine/tests/: __init__.py  test_config.py  test_generator.py
modules/synthetic-payroll-lab/: COMPLETION_SUMMARY.md  LICENSE  PYPI_PUBLICATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_basic.py
modules/synthetic-payroll-lab/src/synthetic_payroll_lab/: __init__.py  cli.py  config.py  generator.py
modules/synthetic-payroll-lab/src/synthetic_payroll_lab/chaos/: README.md  __init__.py  duplicates.py  fk_orphans.py  late_arrivals.py  nulls.py  schema_drift.py
modules/synthetic-payroll-lab/src/synthetic_payroll_lab/domains/: README.md  cost_centers.py  employees.py  jobs.py  payroll.py  schedules.py  timecards.py
modules/synthetic-payroll-lab/tests/: __init__.py  test_chaos.py  test_generator.py
project/: PROJECT_IMPLEMENTATION_STATUS.md  README.md  requirements.txt
project/airflow/: README.md
project/airflow/dags/: cost_monitoring_dag.py  generate_test_data_dag.py  payroll_main_pipeline.py
project/config/: README.md  project_config.yaml
project/dataform/: README.md  dataform.json  package.json  workflow_settings.yaml
project/dataform/definitions/marts/: mart_payroll_summary_by_dept.sqlx
project/dataform/definitions/sources/: sources.js
project/dataform/definitions/staging/: stg_employees.sqlx  stg_jobs.sqlx  stg_payroll_runs.sqlx
project/dataform/definitions/warehouse/: dim_employee.sqlx  fact_payroll_run.sqlx
project/docker/: Dockerfile.airflow  Dockerfile.utils  README.md  build.sh  docker-compose.yml  push.sh  test-local.sh
project/docker/keys/: README.md
project/docs/: README.md
project/great_expectations/: great_expectations.yml
project/great_expectations/checkpoints/: staging_checkpoint.yml  warehouse_checkpoint.yml
project/great_expectations/expectations/staging/: stg_employees_suite.json
project/great_expectations/expectations/warehouse/: fact_payroll_run_suite.json
project/k8s/: README.md  airflow-deployment.yaml  configmap.yaml  cronjob-finops.yaml  namespace.yaml  postgres.yaml  secret.yaml
project/reports/: README.md
project/scripts/: README.md  finops_monitoring.py  run_data_quality_checks.py
project/table_configs/marts/: mart_payroll_summary.yaml
project/table_configs/staging/: stg_employees.yaml  stg_jobs.yaml  stg_payroll_runs.yaml
project/table_configs/warehouse/: dim_employee_scd2.yaml  fact_payroll_run.yaml
project/terraform/: README.md  bigquery.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
project/tests/: README.md  run_tests.sh  test_airflow_dags.py  test_data_quality_checks.py  test_dataform_sqlx.py  test_finops_monitoring.py
