[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scd2-bq-engine"
version = "0.1.0"
description = "BigQuery SCD Type 2 dimension builder with SQLX generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bigquery", "scd2", "dataform", "dbt", "data-warehouse", "dimension"]

[project.urls]
Homepage = "https://github.com/yourusername/scd2-bq-engine"
Documentation = "https://github.com/yourusername/scd2-bq-engine#readme"
Repository = "https://github.com/yourusername/scd2-bq-engine"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

